hugr-llvm/src/extension/snapshots/hugr_llvm__extension__int__test__iwiden_s_2_3@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/int.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define i8 @_hl.main.1(i8 %0) {
alloca_block:
  %"0" = alloca i8, align 1
  %"01" = alloca i8, align 1
  %"2_0" = alloca i8, align 1
  %"4_0" = alloca i8, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i8 %0, i8* %"0", align 1
  %"02" = load i8, i8* %"0", align 1
  store i8 %"02", i8* %"2_0", align 1
  %"2_03" = load i8, i8* %"2_0", align 1
  %"2_04" = load i8, i8* %"2_0", align 1
  store i8 %"2_04", i8* %"4_0", align 1
  %"4_05" = load i8, i8* %"4_0", align 1
  store i8 %"4_05", i8* %"01", align 1
  %"06" = load i8, i8* %"01", align 1
  ret i8 %"06"
}
